<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestActivity">

    <TextView
        android:id="@+id/syubutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sytext"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/matigai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sytext" />

    <ImageView
        android:id="@+id/suytudai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/animal_quiz_usagi_maru" />

    <Button
        android:id="@+id/matigai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/matigai"
        app:layout_constraintBottom_toTopOf="@+id/syut"
        app:layout_constraintEnd_toStartOf="@+id/seikai"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797"
        tools:text="@string/matigai" />

    <Button
        android:id="@+id/syut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syu"
        app:layout_constraintEnd_toStartOf="@+id/hakusyu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hakusyu" />

    <Button
        android:id="@+id/seikai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/seikai"
        app:layout_constraintBottom_toTopOf="@+id/hakusyu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <Button
        android:id="@+id/hakusyu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="72dp"
        android:text="@string/hakusyu"
        app:layout_constraintBottom_toTopOf="@+id/suytudai"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/hakusyu" />

    <Button
        android:id="@+id/kaiku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suytudai" />
</androidx.constraintlayout.widget.ConstraintLayout>